use test driver for tcl from David Holmes
darcs-hash:20060613162846-2fc9d-4ed467fcf18821154a1964970d5e25c76a92ce5f.gz

--- a/Tcl/Tests/CMakeLists.txt
+++ b/Tcl/Tests/CMakeLists.txt
@@ -1,82 +1,107 @@
-SET(ITKWISH "${WrapITK_BINARY_DIR}/Tcl/itkwish")
 
-ADD_TEST(TclListAll sh ${ITKWISH} ${CMAKE_CURRENT_SOURCE_DIR}/ListAll.tcl)
+# configure the test driver
+FIND_PROGRAM(IMAGE_COMPARE ImageCompare)
+IF(CMAKE_CONFIGURATION_TYPES)
+  SET(CONFIG_WRAP_ITK_TCL_DIR "${WrapITK_BINARY_DIR}")
+  SET(CONFIG_WRAP_ITK_TCL_SWIG_DIR "${WrapITK_BINARY_DIR}/lib/${CMAKE_CFG_INTDIR}")
+  SET(CONFIG_WRAP_ITK_ITKWISH_DIR "${WrapITK_BINARY_DIR}/bin/${CMAKE_CFG_INTDIR}")
+ELSE(CMAKE_CONFIGURATION_TYPES)
+  SET(CONFIG_WRAP_ITK_TCL_DIR "${WrapITK_BINARY_DIR}")
+  SET(CONFIG_WRAP_ITK_TCL_SWIG_DIR "${WrapITK_BINARY_DIR}/lib")
+  SET(CONFIG_WRAP_ITK_ITKWISH_DIR "${WrapITK_BINARY_DIR}/bin")
+ENDIF(CMAKE_CONFIGURATION_TYPES)
+CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/tclTestDriver.tcl.in
+               ${CMAKE_CURRENT_BINARY_DIR}/tclTestDriver.tcl
+               @ONLY IMMEDIATE )
+
+
+
+SET(TCL_DRIVER ${TCL_TCLSH} ${CMAKE_CURRENT_BINARY_DIR}/tclTestDriver.tcl)
+
+ADD_TEST(TclListAll ${TCL_DRIVER} ${CMAKE_CURRENT_SOURCE_DIR}/ListAll.tcl)
 
 # this test is broken I think because of a bug in itk::ParallelSparseFieldLevelSetImageFilter::PrintSelf()
 # TODO: run this test, once the bug is fixed
-# ADD_TEST(TclPrintAll sh ${ITKWISH} ${CMAKE_CURRENT_SOURCE_DIR}/PrintAll.tcl)
+# ADD_TEST(TclPrintAll ${TCL_DRIVER} ${CMAKE_CURRENT_SOURCE_DIR}/PrintAll.tcl)
 
 INTERSECTION(WRAP_2 2 "${WRAP_ITK_DIMS}")
 IF(WRAP_unsigned_short AND WRAP_2)
   ADD_TEST(TclBinaryDilateImageFilter
-    sh ${ITKWISH}
+    ${TCL_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/BinaryDilateImageFilter.tcl
     ${WrapITK_SOURCE_DIR}/images/2th_cthead1.png
-    TclBinaryDilateImageFilter.png
+    BinaryDilateImageFilter.png
+    --compare BinaryDilateImageFilter.png ${WrapITK_SOURCE_DIR}/images/BinaryDilateImageFilter.png
   )
 
   ADD_TEST(TclBinaryErodeImageFilter
-    sh ${ITKWISH}
+    ${TCL_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/BinaryErodeImageFilter.tcl
     ${WrapITK_SOURCE_DIR}/images/2th_cthead1.png
-    TclBinaryErodeImageFilter.png
+    BinaryErodeImageFilter.png
+    --compare BinaryErodeImageFilter.png ${WrapITK_SOURCE_DIR}/images/BinaryErodeImageFilter.png
   )
 
   ADD_TEST(TclBinaryThresholdImageFilter
-    sh ${ITKWISH}
+    ${TCL_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/BinaryThresholdImageFilter.tcl
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
-    TclBinaryThresholdImageFilter.png
+    BinaryThresholdImageFilter.png
     50 150
     0 65535
+    --compare BinaryThresholdImageFilter.png ${WrapITK_SOURCE_DIR}/images/BinaryThresholdImageFilter.png
   )
 
   ADD_TEST(TclCastImageFilter
-    sh ${ITKWISH}
+    ${TCL_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/CastImageFilter.tcl
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
-    TclCastImageFilter.png
+    CastImageFilter.png
+    --compare CastImageFilter.png ${WrapITK_SOURCE_DIR}/images/CastImageFilter.png
   )
 
 # need to find a dicom image for this test
 
 #   ADD_TEST(TclDicomSliceRead
-#     sh ${ITKWISH}
+#     ${TCL_DRIVER}
 #     ${CMAKE_CURRENT_SOURCE_DIR}/DicomSliceRead.tcl
 #     ${WrapITK_SOURCE_DIR}/images/cthead1.png
 #     DicomSliceRead.png
 #   )
 
   ADD_TEST(TclMeanImageFilter
-    sh ${ITKWISH}
+    ${TCL_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/MeanImageFilter.tcl
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
-    TclMeanImageFilter.png
+    MeanImageFilter.png
     3
   )
 
   ADD_TEST(TclMedianImageFilter
-    sh ${ITKWISH}
+    ${TCL_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/MedianImageFilter.tcl
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
-    TclMedianImageFilter.png
+    MedianImageFilter.png
     3
+    --compare MeanImageFilter.png ${WrapITK_SOURCE_DIR}/images/MeanImageFilter.png
   )
 
   ADD_TEST(TclSigmoidImageFilter
-    sh ${ITKWISH}
+    ${TCL_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/SigmoidImageFilter.tcl
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
-    TclSigmoidImageFilter.png
+    SigmoidImageFilter.png
     10 240 10 170
+    --compare SigmoidImageFilter.png ${WrapITK_SOURCE_DIR}/images/SigmoidImageFilter.png
   )
 
   ADD_TEST(TclThresholdImageFilter
-    sh ${ITKWISH}
+    ${TCL_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/ThresholdImageFilter.tcl
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
-    TclThresholdImageFilter.png
+    ThresholdImageFilter.png
     150 150
+    --compare ThresholdImageFilter.png ${WrapITK_SOURCE_DIR}/images/ThresholdImageFilter.png
   )
 
 ENDIF(WRAP_unsigned_short AND WRAP_2)
@@ -85,30 +110,30 @@ ENDIF(WRAP_unsigned_short AND WRAP_2)
 
 IF(WRAP_float AND WRAP_2)
 #   ADD_TEST(TclCannyEdgeDetectionImageFilter
-#     sh ${ITKWISH}
+#     ${TCL_DRIVER}
 #     ${CMAKE_CURRENT_SOURCE_DIR}/CannyEdgeDetectionImageFilter.tcl
 #     ${WrapITK_SOURCE_DIR}/images/cthead1.png
 #     TclCannyEdgeDetectionImageFilter.png
 #   )
 
   ADD_TEST(TclCurvatureAnisotropicDiffusionImageFilter
-    sh ${ITKWISH}
+    ${TCL_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/CurvatureAnisotropicDiffusionImageFilter.tcl
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
-    TclCurvatureAnisotropicDiffusionImageFilter.png
+    CurvatureAnisotropicDiffusionImageFilter.png
     5 0.125 3
   )
 
   ADD_TEST(TclCurvatureFlowImageFilter
-    sh ${ITKWISH}
+    ${TCL_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/CurvatureFlowImageFilter.tcl
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
-    TclCurvatureFlowImageFilter.png
+    CurvatureFlowImageFilter.png
     5 0.125 1.0
   )
 
   ADD_TEST(TclGradientAnisotropicDiffusionImageFilter
-    sh ${ITKWISH}
+    ${TCL_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/GradientAnisotropicDiffusionImageFilter.tcl
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
     GradientAnisotropicDiffusionImageFilter.png
@@ -128,10 +153,11 @@ FOREACH(TCL_TEST_IMAGE_DIMENSION ${WRAP_ITK_DIMS})
                   @ONLY IMMEDIATE)
 
     ADD_TEST(TclSimplePipeline${TCL_TEST_PIXEL_TYPE}${TCL_TEST_IMAGE_DIMENSION}
-      sh ${ITKWISH}
+      ${TCL_DRIVER}
       ${TEST_FILE_NAME}.tcl
       ${WrapITK_SOURCE_DIR}/images/cthead1.png
       ${TEST_FILE_NAME}.img
+      --compare ${TEST_FILE_NAME}.img ${WrapITK_SOURCE_DIR}/images/cthead1.png
     )
 
   ENDFOREACH(TCL_TEST_PIXEL_TYPE)
