fix empty InsightToolkit.jar file on windows
darcs-hash:20060614105021-2fc9d-a8d4a0a12fa18119b35dffd096197c842372e0f0.gz

--- a/Java/CMakeLists.txt
+++ b/Java/CMakeLists.txt
@@ -76,6 +76,7 @@ IF(CMAKE_CONFIGURATION_TYPES)
     DEPENDS ${ITK_JAVA_KITS_FILES}
     COMMAND ${JAVA_ARCHIVE}
     ARGS -cf ${WRAP_ITK_JAVA_DIR}/${CMAKE_CFG_INTDIR}/InsightToolkit.jar
+    -C ${CMAKE_CFG_INTDIR}
     InsightToolkit
     COMMENT "Java Archive"
     )
