use more WRAP_ITK_INSTALL
darcs-hash:20060614202703-2fc9d-88ca56369fb9d48ebc2920f178415999041fe886.gz

--- a/Java/CMakeLists.txt
+++ b/Java/CMakeLists.txt
@@ -35,8 +35,7 @@ ELSE(CMAKE_CONFIGURATION_TYPES)
   FILE(WRITE ${CMAKE_CURRENT_BINARY_DIR}/itk_build_tree.mark
     "File next to InsightToolkit.jar to mark the build tree.\n"
     )
-  INSTALL_FILES("${WRAP_ITK_INSTALL_PREFIX}/Java" FILES
-    ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar )
+  WRAP_ITK_INSTALL(/Java ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar )
 ENDIF(CMAKE_CONFIGURATION_TYPES)
 
 SET(ORDERING_DEP)
@@ -82,7 +81,7 @@ IF(CMAKE_CONFIGURATION_TYPES)
     )
   ADD_CUSTOM_TARGET(ITKJavaJar ALL DEPENDS ${WRAP_ITK_JAVA_DIR}/${CMAKE_CFG_INTDIR}/InsightToolkit.jar)
   SET(DOLLAR "$")
-  INSTALL_FILES("${WRAP_ITK_INSTALL_PREFIX}/Java" FILES ${WRAP_ITK_JAVA_DIR}/${DOLLAR}{BUILD_TYPE}/InsightToolkit.jar)
+  WRAP_ITK_INSTALL(/Java ${WRAP_ITK_JAVA_DIR}/${DOLLAR}{BUILD_TYPE}/InsightToolkit.jar)
 ELSE(CMAKE_CONFIGURATION_TYPES)
   ADD_CUSTOM_COMMAND(
     OUTPUT ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar
@@ -93,7 +92,7 @@ ELSE(CMAKE_CONFIGURATION_TYPES)
     COMMENT "Java Archive"
     )
   ADD_CUSTOM_TARGET(ITKJavaJar ALL DEPENDS ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar)
-  INSTALL_FILES("${WRAP_ITK_INSTALL_PREFIX}/Java" FILES ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar)
+  WRAP_ITK_INSTALL(/Java ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar)
 ENDIF(CMAKE_CONFIGURATION_TYPES)
 ADD_DEPENDENCIES(ITKJavaJar ${ITK_JAVA_KIT_LIBS} SwigRuntimeJava)
 FOREACH(Kit ${WRAP_ITK_MODULES})
