--- a/Python/CMakeLists.txt
+++ b/Python/CMakeLists.txt
@@ -63,8 +63,7 @@ CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/itkConfig.py.in"
                "${WrapITK_BINARY_DIR}/Python/InstallOnly/itkConfig.py"
               @ONLY IMMEDIATE)
 
-INSTALL_FILES("${WRAP_ITK_INSTALL_PREFIX}/Python" FILES 
-              "${WrapITK_BINARY_DIR}/Python/InstallOnly/itkConfig.py")
+WRAP_ITK_INSTALL(/Python "${WrapITK_BINARY_DIR}/Python/InstallOnly/itkConfig.py")
 
 
 ###############################################################################
@@ -122,7 +121,7 @@ ELSE ("${WrapITK_BINARY_DIR}" MATCHES "^${WrapITK_SOURCE_DIR}$")
 ENDIF ("${WrapITK_BINARY_DIR}" MATCHES "^${WrapITK_SOURCE_DIR}$")
 
 # Install the package python files.
-INSTALL_FILES("${WRAP_ITK_INSTALL_PREFIX}/Python" FILES ${WRAP_ITK_PYTHON_INSTALL_FILES})
+WRAP_ITK_INSTALL(/Python ${WRAP_ITK_PYTHON_INSTALL_FILES})
 
 ###############################################################################
 # Configure and install the custom python .pth files
