--- a/Python/itkExtras/CMakeLists.txt
+++ b/Python/itkExtras/CMakeLists.txt
@@ -47,4 +47,4 @@ ELSE ("${WrapITK_BINARY_DIR}" MATCHES "^${WrapITK_SOURCE_DIR}$")
 ENDIF ("${WrapITK_BINARY_DIR}" MATCHES "^${WrapITK_SOURCE_DIR}$")
 
 # Install the package python files.
-INSTALL_FILES("${WRAP_ITK_INSTALL_PREFIX}/Python/itkExtras" FILES ${WRAP_ITK_PYTHON_EXTRAS_INSTALL_FILES})
+WRAP_ITK_INSTALL(/Python/itkExtras ${WRAP_ITK_PYTHON_EXTRAS_INSTALL_FILES})
