check output image for GradientAnisotropicDiffusionImageFilter test
darcs-hash:20060614202908-2fc9d-f0b65d8b979950105f717607706a770903132910.gz

--- a/Tcl/Tests/CMakeLists.txt
+++ b/Tcl/Tests/CMakeLists.txt
@@ -138,6 +138,8 @@ IF(WRAP_float AND WRAP_2)
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
     GradientAnisotropicDiffusionImageFilter.png
     5 0.125 1.0
+    --compare GradientAnisotropicDiffusionImageFilter.png
+              ${WrapITK_SOURCE_DIR}/images/GradientAnisotropicDiffusionImageFilter.png
   )
 ENDIF(WRAP_float AND WRAP_2)
 
