fix findEmptyClasses and run it with ctest
darcs-hash:20060614221643-2fc9d-c57982fd75fef61901080f909b5c3e35e0475362.gz

--- a/Python/Tests/CMakeLists.txt
+++ b/Python/Tests/CMakeLists.txt
@@ -20,6 +20,8 @@ ADD_TEST(PythonTestObject ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/TestObject.py)
 
 ADD_TEST(PythonFilterCoverage ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/filterCoverage.py ${ITK_INCLUDE_DIRS})
 
+ADD_TEST(PythonFindEmptyClasses ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/findEmptyClasses.py)
+
 
 # some tests will fail if dim=2 and unsigned short are not wrapped
 INTERSECTION(WRAP_2 2 "${WRAP_ITK_DIMS}")
