--- a/Python/Tests/pythonTestDriver.py.in
+++ b/Python/Tests/pythonTestDriver.py.in
@@ -5,21 +5,23 @@
 import os, subprocess, sys
 from optparse import OptionParser
 
-env_lib_name = "LD_LIBRARY_PATH"
+# the environment needed to find the lib depend on the system
+# I'm really not sure that's needed on all the systems...
+env_lib_name = {"posix": "LD_LIBRARY_PATH", "mac": "DYLD_LIBRARY_PATH", "nt": "PATH"}[os.name]
 if os.environ.has_key(env_lib_name) :
-  os.environ[env_lib_name] = "@PYTHON_TEST_LIB_PATH@:%s" % os.environ[env_lib_name]
+  os.environ[env_lib_name] = "@PYTHON_TEST_LIB_PATH@"+os.pathsep+os.environ[env_lib_name]
 else:
   os.environ[env_lib_name] = "@PYTHON_TEST_LIB_PATH@"
 
 env_python_path = "PYTHONPATH"
 if os.environ.has_key(env_python_path) :
-  os.environ[env_python_path] = "@PYTHON_TEST_PYTHON_PATH@:%s" % os.environ[env_python_path]
+  os.environ[env_python_path] = "@PYTHON_TEST_PYTHON_PATH@"+os.pathsep+os.environ[env_python_path]
 else:
   os.environ[env_python_path] = "@PYTHON_TEST_PYTHON_PATH@"
 
 env_wrapitk_python_path = "WRAPITK_PYTHON_PATH"
 if os.environ.has_key(env_wrapitk_python_path) :
-  os.environ[env_wrapitk_python_path] = "@PYTHON_TEST_WRAPITK_PYTHON_PATH@:%s" % os.environ[env_wrapitk_python_path]
+  os.environ[env_wrapitk_python_path] = "@PYTHON_TEST_WRAPITK_PYTHON_PATH@"+os.pathsep+os.environ[env_wrapitk_python_path]
 else:
   os.environ[env_wrapitk_python_path] = "@PYTHON_TEST_WRAPITK_PYTHON_PATH@"
 
