fix path for windows
darcs-hash:20060618191312-2fc9d-59c1ce36a12522759e37a81ee4b7232376478f32.gz

--- a/Python/Tests/CMakeLists.txt
+++ b/Python/Tests/CMakeLists.txt
@@ -1,7 +1,9 @@
 
 # configure the test driver
-SET(PYTHON_TEST_LIB_PATH "${WrapITK_BINARY_DIR}/lib")
-SET(PYTHON_TEST_PYTHON_PATH "${WrapITK_BINARY_DIR}/Python")
+MESSAGE("--- ${WrapITK_BINARY_DIR} ---")
+
+SET(PYTHON_TEST_LIB_PATH "${WrapITK_BINARY_DIR}/lib/${WRAP_ITK_BUILD_INTDIR}")
+SET(PYTHON_TEST_PYTHON_PATH "${WrapITK_BINARY_DIR}/Python/${WRAP_ITK_BUILD_INTDIR}")
 FIND_PROGRAM(IMAGE_COMPARE ImageCompare)
 
 CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pythonTestDriver.py.in"
