--- a/Java/CWD/CMakeLists.txt
+++ b/Java/CWD/CMakeLists.txt
@@ -1,6 +1,6 @@
 IF(WRAP_ITK_JAVA)
   SET_SOURCE_FILES_PROPERTIES(${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx GENERATED)
-  ADD_LIBRARY(SwigRuntimeJava MODULE ${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx JavaCWD.cxx)
+  ADD_LIBRARY(SwigRuntimeJava SHARED ${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx JavaCWD.cxx)
   INSTALL_TARGETS("${WRAP_ITK_INSTALL_PREFIX}/lib" SwigRuntimeJava)
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
   ADD_CUSTOM_COMMAND(
