fix configuration usage with tcl tests
darcs-hash:20060622192659-2fc9d-9916d85ab7e02200788573768c2e88de81404658.gz

--- a/Tcl/Tests/CMakeLists.txt
+++ b/Tcl/Tests/CMakeLists.txt
@@ -2,21 +2,26 @@
 # configure the test driver
 FIND_PROGRAM(IMAGE_COMPARE ImageCompare)
 IF(CMAKE_CONFIGURATION_TYPES)
-  SET(CONFIG_WRAP_ITK_TCL_DIR "${WrapITK_BINARY_DIR}")
-  SET(CONFIG_WRAP_ITK_TCL_SWIG_DIR "${WrapITK_BINARY_DIR}/lib/${CMAKE_CFG_INTDIR}")
-  SET(CONFIG_WRAP_ITK_ITKWISH_DIR "${WrapITK_BINARY_DIR}/bin/${CMAKE_CFG_INTDIR}")
+  FOREACH(config ${CMAKE_CONFIGURATION_TYPES})
+    SET(CONFIG_WRAP_ITK_TCL_DIR "${WrapITK_BINARY_DIR}/Tcl/${config}")
+    SET(CONFIG_WRAP_ITK_TCL_SWIG_DIR "${WrapITK_BINARY_DIR}/lib/${config}")
+    SET(CONFIG_WRAP_ITK_ITKWISH_DIR "${WrapITK_BINARY_DIR}/bin/${config}")
+    CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/tclTestDriver.tcl.in
+                 ${CMAKE_CURRENT_BINARY_DIR}/${config}/tclTestDriver.tcl
+                 @ONLY IMMEDIATE )
+  ENDFOREACH(config)
 ELSE(CMAKE_CONFIGURATION_TYPES)
   SET(CONFIG_WRAP_ITK_TCL_DIR "${WrapITK_BINARY_DIR}")
   SET(CONFIG_WRAP_ITK_TCL_SWIG_DIR "${WrapITK_BINARY_DIR}/lib")
   SET(CONFIG_WRAP_ITK_ITKWISH_DIR "${WrapITK_BINARY_DIR}/bin")
-ENDIF(CMAKE_CONFIGURATION_TYPES)
-CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/tclTestDriver.tcl.in
+  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/tclTestDriver.tcl.in
                ${CMAKE_CURRENT_BINARY_DIR}/tclTestDriver.tcl
                @ONLY IMMEDIATE )
+ENDIF(CMAKE_CONFIGURATION_TYPES)
 
 
 
-SET(TCL_DRIVER ${TCL_TCLSH} ${CMAKE_CURRENT_BINARY_DIR}/tclTestDriver.tcl)
+SET(TCL_DRIVER ${TCL_TCLSH} "${CMAKE_CURRENT_BINARY_DIR}/\${CTEST_CONFIGURATION_TYPE}/tclTestDriver.tcl")
 
 ADD_TEST(TclListAll ${TCL_DRIVER} ${CMAKE_CURRENT_SOURCE_DIR}/ListAll.tcl)
 
