--- a/Python/Tests/pythonTestDriver.py.in
+++ b/Python/Tests/pythonTestDriver.py.in
@@ -7,23 +7,26 @@ from optparse import OptionParser
 
 # the environment needed to find the lib depend on the system
 # I'm really not sure that's needed on all the systems...
-env_lib_name = {"posix": "LD_LIBRARY_PATH", "mac": "DYLD_LIBRARY_PATH", "nt": "PATH"}[os.name]
-if os.environ.has_key(env_lib_name) :
-  os.environ[env_lib_name] = "@PYTHON_TEST_LIB_PATH@"+os.pathsep+os.environ[env_lib_name]
+env_lib_path = {"posix": "LD_LIBRARY_PATH", "mac": "DYLD_LIBRARY_PATH", "nt": "PATH"}[os.name]
+lib_path_list = "@PYTHON_TEST_LIB_PATH@".split(';')
+if os.environ.has_key(env_lib_path) :
+  os.environ[env_lib_path] = os.pathsep.join(lib_path_list + [os.environ[env_lib_path]])
 else:
-  os.environ[env_lib_name] = "@PYTHON_TEST_LIB_PATH@"
+  os.environ[env_lib_path] = os.pathsep.join(lib_path_list)
 
 env_python_path = "PYTHONPATH"
+python_path_list = "@PYTHON_TEST_PYTHON_PATH@".split(';')
 if os.environ.has_key(env_python_path) :
-  os.environ[env_python_path] = "@PYTHON_TEST_PYTHON_PATH@"+os.pathsep+os.environ[env_python_path]
+  os.environ[env_python_path] = os.pathsep.join(python_path_list + [os.environ[env_python_path]])
 else:
-  os.environ[env_python_path] = "@PYTHON_TEST_PYTHON_PATH@"
+  os.environ[env_python_path] = os.pathsep.join(python_path_list)
 
 env_wrapitk_python_path = "WRAPITK_PYTHON_PATH"
+wrapitk_python_path_list = "@PYTHON_TEST_WRAPITK_PYTHON_PATH@".split(';')
 if os.environ.has_key(env_wrapitk_python_path) :
-  os.environ[env_wrapitk_python_path] = "@PYTHON_TEST_WRAPITK_PYTHON_PATH@"+os.pathsep+os.environ[env_wrapitk_python_path]
+  os.environ[env_wrapitk_python_path] = os.pathsep.join(wrapitk_python_path_list + [os.environ[env_wrapitk_python_path]])
 else:
-  os.environ[env_wrapitk_python_path] = "@PYTHON_TEST_WRAPITK_PYTHON_PATH@"
+  os.environ[env_wrapitk_python_path] = os.pathsep.join(wrapitk_python_path_list)
 
 
 
