use better var name for python test driver
darcs-hash:20060704220344-2fc9d-520d634e76a4419a49e189d82ac9005e541928d5.gz

--- a/Python/Tests/CMakeLists.txt
+++ b/Python/Tests/CMakeLists.txt
@@ -22,37 +22,37 @@ ENDIF(CMAKE_CONFIGURATION_TYPES)
 WRAP_ITK_INSTALL("/Configuration/Python/Tests" "${CMAKE_CURRENT_SOURCE_DIR}/pythonTestDriver.py.in")
 
 
-SET(PYTHON "${PYTHON_EXECUTABLE}" "${CMAKE_CURRENT_BINARY_DIR}/\${CTEST_CONFIGURATION_TYPE}/pythonTestDriver.py")
+SET(PYTHON_DRIVER "${PYTHON_EXECUTABLE}" "${CMAKE_CURRENT_BINARY_DIR}/\${CTEST_CONFIGURATION_TYPE}/pythonTestDriver.py")
 
 
-ADD_TEST(PythonTestDirectory ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/TestDirectory.py)
+ADD_TEST(PythonTestDirectory ${PYTHON_DRIVER} ${CMAKE_CURRENT_SOURCE_DIR}/TestDirectory.py)
 
-ADD_TEST(PythonTestObject ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/TestObject.py)
+ADD_TEST(PythonTestObject ${PYTHON_DRIVER} ${CMAKE_CURRENT_SOURCE_DIR}/TestObject.py)
 
-ADD_TEST(PythonFilterCoverage ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/filterCoverage.py ${ITK_INCLUDE_DIRS})
+ADD_TEST(PythonFilterCoverage ${PYTHON_DRIVER} ${CMAKE_CURRENT_SOURCE_DIR}/filterCoverage.py ${ITK_INCLUDE_DIRS})
 
-ADD_TEST(PythonFindEmptyClasses ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/findEmptyClasses.py)
+ADD_TEST(PythonFindEmptyClasses ${PYTHON_DRIVER} ${CMAKE_CURRENT_SOURCE_DIR}/findEmptyClasses.py)
 
 
 # some tests will fail if dim=2 and unsigned short are not wrapped
 INTERSECTION(WRAP_2 2 "${WRAP_ITK_DIMS}")
 IF(WRAP_unsigned_short AND WRAP_2)
-  ADD_TEST(PythonTypemaps ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/typemaps.py)
+  ADD_TEST(PythonTypemaps ${PYTHON_DRIVER} ${CMAKE_CURRENT_SOURCE_DIR}/typemaps.py)
   
-  ADD_TEST(PythonTemplate ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/template.py)
+  ADD_TEST(PythonTemplate ${PYTHON_DRIVER} ${CMAKE_CURRENT_SOURCE_DIR}/template.py)
   
-  ADD_TEST(PythonExtras ${PYTHON}
+  ADD_TEST(PythonExtras ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/extras.py
     ${WrapITK_SOURCE_DIR}/images/cthead1.png out.png
   )
   
-  ADD_TEST(PythonModuleToModule ${PYTHON}
+  ADD_TEST(PythonModuleToModule ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/module2module.py
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
   )
 
   ADD_TEST(PythonBinaryDilateImageFilter
-    ${PYTHON}
+    ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/BinaryDilateImageFilter.py
     ${WrapITK_SOURCE_DIR}/images/2th_cthead1.png
     BinaryDilateImageFilter.png
@@ -60,7 +60,7 @@ IF(WRAP_unsigned_short AND WRAP_2)
   )
 
   ADD_TEST(PythonBinaryErodeImageFilter
-    ${PYTHON}
+    ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/BinaryErodeImageFilter.py
     ${WrapITK_SOURCE_DIR}/images/2th_cthead1.png
     BinaryErodeImageFilter.png
@@ -68,7 +68,7 @@ IF(WRAP_unsigned_short AND WRAP_2)
   )
 
   ADD_TEST(PythonBinaryThresholdImageFilter
-    ${PYTHON}
+    ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/BinaryThresholdImageFilter.py
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
     BinaryThresholdImageFilter.png
@@ -78,7 +78,7 @@ IF(WRAP_unsigned_short AND WRAP_2)
   )
 
   ADD_TEST(PythonCastImageFilter
-    ${PYTHON}
+    ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/CastImageFilter.py
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
     CastImageFilter.png
@@ -86,7 +86,7 @@ IF(WRAP_unsigned_short AND WRAP_2)
   )
 
   ADD_TEST(PythonGrayscaleDilateImageFilter
-    ${PYTHON}
+    ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/GrayscaleDilateImageFilter.py
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
     GrayscaleDilateImageFilter.png
@@ -94,7 +94,7 @@ IF(WRAP_unsigned_short AND WRAP_2)
   )
 
   ADD_TEST(PythonGrayscaleErodeImageFilter
-    ${PYTHON}
+    ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/GrayscaleErodeImageFilter.py
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
     GrayscaleErodeImageFilter.png
@@ -102,7 +102,7 @@ IF(WRAP_unsigned_short AND WRAP_2)
   )
 
   ADD_TEST(PythonMeanImageFilter
-    ${PYTHON}
+    ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/MeanImageFilter.py
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
     MeanImageFilter.png
@@ -111,7 +111,7 @@ IF(WRAP_unsigned_short AND WRAP_2)
   )
 
   ADD_TEST(PythonMedianImageFilter
-    ${PYTHON}
+    ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/MedianImageFilter.py
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
     MedianImageFilter.png
@@ -120,7 +120,7 @@ IF(WRAP_unsigned_short AND WRAP_2)
   )
 
   ADD_TEST(PythonSigmoidImageFilter
-    ${PYTHON}
+    ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/SigmoidImageFilter.py
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
     SigmoidImageFilter.png
@@ -129,7 +129,7 @@ IF(WRAP_unsigned_short AND WRAP_2)
   )
 
   ADD_TEST(PythonThresholdImageFilter
-    ${PYTHON}
+    ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/ThresholdImageFilter.py
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
     ThresholdImageFilter.png
@@ -142,7 +142,7 @@ ENDIF(WRAP_unsigned_short AND WRAP_2)
 
 IF(WRAP_float AND WRAP_2)
   ADD_TEST(PythonCurvatureAnisotropicDiffusionImageFilter
-    ${PYTHON}
+    ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/CurvatureAnisotropicDiffusionImageFilter.py
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
     CurvatureAnisotropicDiffusionImageFilter.png
@@ -150,7 +150,7 @@ IF(WRAP_float AND WRAP_2)
   )
 
   ADD_TEST(PythonCurvatureFlowImageFilter
-    ${PYTHON}
+    ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/CurvatureFlowImageFilter.py
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
     CurvatureFlowImageFilter.png
@@ -158,7 +158,7 @@ IF(WRAP_float AND WRAP_2)
   )
 
   ADD_TEST(PythonSmoothingRecursiveGaussianImageFilter
-    ${PYTHON}
+    ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/SmoothingRecursiveGaussianImageFilter.py
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
     SmoothingRecursiveGaussianImageFilter.png
@@ -166,14 +166,14 @@ IF(WRAP_float AND WRAP_2)
   )
 
   ADD_TEST(PythonLaplacianImageFilter
-    ${PYTHON}
+    ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/LaplacianImageFilter.py
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
     LaplacianImageFilter.png
   )
 
   ADD_TEST(PythonFFTImageFilter
-    ${PYTHON}
+    ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/FFTImageFilter.py
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
     FFTImageFilterReal.png
@@ -184,7 +184,7 @@ IF(WRAP_float AND WRAP_2)
   )
 
   ADD_TEST( PythonGradientMagnitudeRecursiveGaussianImageFilterTest
-    ${PYTHON}
+    ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/GradientMagnitudeRecursiveGaussianImageFilter.py
     ${WrapITK_SOURCE_DIR}/images/BrainProtonDensitySlice.png
     GradientMagnitudeRecursiveGaussianImageFilter.png
@@ -194,7 +194,7 @@ IF(WRAP_float AND WRAP_2)
   )
 
   ADD_TEST( PythonGradientAnisotropicDiffusionImageFilterTest
-    ${PYTHON}
+    ${PYTHON_DRIVER}
     ${CMAKE_CURRENT_SOURCE_DIR}/GradientAnisotropicDiffusionImageFilter.py
     ${WrapITK_SOURCE_DIR}/images/BrainProtonDensitySlice.png
     GradientAnisotropicDiffusionImageFilter.png
@@ -209,7 +209,7 @@ IF(WRAP_float AND WRAP_2)
 # keep just one to be sure it run, but don't compare the images
 
   ADD_TEST( PythonGeodesicActiveContourLeftVentricleTest
-    ${PYTHON}
+    ${PYTHON_DRIVER}
 #     --compare GeodesicActiveContourLeftVentricleTest.png
 #     	      ${WrapITK_SOURCE_DIR}/images/GeodesicActiveContourLeftVentricleTest.png
     --
@@ -220,7 +220,7 @@ IF(WRAP_float AND WRAP_2)
   )
 
 #   ADD_TEST( PythonGeodesicActiveContourWhiteMatterTest
-#     ${PYTHON}
+#     ${PYTHON_DRIVER}
 #     --compare GeodesicActiveContourWhiteMatterTest.png
 #     	      ${WrapITK_SOURCE_DIR}/images/GeodesicActiveContourWhiteMatterTest.png
 #     --
@@ -231,7 +231,7 @@ IF(WRAP_float AND WRAP_2)
 #   )
 
 #   ADD_TEST( PythonGeodesicActiveContourGrayMatterTest
-#     ${PYTHON}
+#     ${PYTHON_DRIVER}
 #     --compare GeodesicActiveContourGrayMatterTest.png
 #     	      ${WrapITK_SOURCE_DIR}/images/GeodesicActiveContourGrayMatterTest.png
 #     --
@@ -249,7 +249,7 @@ ENDIF(WRAP_float AND WRAP_2)
 UNIQUE(types "${WRAP_ITK_SCALAR};UC")
 FOREACH(d ${WRAP_ITK_DIMS})
   FOREACH(t ${types})
-    ADD_TEST(PythonSimplePipeline${t}${d} ${PYTHON}
+    ADD_TEST(PythonSimplePipeline${t}${d} ${PYTHON_DRIVER}
       ${CMAKE_CURRENT_SOURCE_DIR}/simple_pipeline.py
       ${t}
       ${d}
