the value was reused for the installed files, so it was ok if configurations
were not used, and wrong when they were (thanks to Charl Botha)
fix wrong path for installed file when configurations are used

darcs-hash:20060705180057-2fc9d-8c400c1f5b33b98f55abd527894ab8a300fd027b.gz

--- a/Python/CMakeLists.txt
+++ b/Python/CMakeLists.txt
@@ -59,6 +59,7 @@ ENDIF(CMAKE_CONFIGURATION_TYPES)
 SET(CONFIG_WRAP_ITK_TEST_ROOT "None")
 SET(CONFIG_PYTHON_SWIGLIB_DIR "../lib")
 SET(CONFIG_PYTHON_SWIGPY_DIR "../lib")
+SET(CONFIG_PYTHON_CONFIGPY_DIR "Configuration")
 CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/itkConfig.py.in"
                "${WrapITK_BINARY_DIR}/Python/InstallOnly/itkConfig.py"
               @ONLY IMMEDIATE)
