first work to add numeric traits
darcs-hash:20060707093346-2fc9d-44d02a46275024f815a3f1e75620ea6e25a81906.gz

--- a/ConfigurationInputs/wrap_.cxx.in
+++ b/ConfigurationInputs/wrap_.cxx.in
@@ -8,5 +8,11 @@ namespace _cable_
    {
 @CONFIG_WRAPPER_TYPEDEFS@
    }
+void force_instantiate()
+{
+  using namespace _cable_::wrappers;
+@CONFIG_WRAPPER_FORCE_INSTANTIATE@
+}
+@CONFIG_WRAPPER_EXTRAS@
 }
 #endif
