force build of java tests each time to be sure they are built at least once
darcs-hash:20060719082454-2fc9d-5e3a0b3ea86dd0083a7e47d03872e684d15d5959.gz

--- a/Java/Tests/CMakeLists.txt
+++ b/Java/Tests/CMakeLists.txt
@@ -188,4 +188,4 @@ ENDFOREACH(JAVA_TEST_IMAGE_DIMENSION)
 
 
 
-ADD_CUSTOM_TARGET(JavaTests DEPENDS ${targets})
+ADD_CUSTOM_TARGET(JavaTests ALL DEPENDS ${targets})
