add WrapITK version
darcs-hash:20060720101407-2fc9d-628feb27a9729def77c9f3e6095501fc105be999.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,11 @@ ENABLE_TESTING()
 # load the language autodetection stuff for the insight journal
 INCLUDE(LanguageAutoDetection.cmake)
 
+# set WrapITK version
+SET(WrapITK_VERSION_MAJOR 0)
+SET(WrapITK_VERSION_MINOR 2)
+SET(WrapITK_VERSION_PATCH 0)
+
 
 OPTION(WRAP_ITK_TCL "Build cswig Tcl wrapper support." OFF)
 OPTION(WRAP_ITK_PYTHON "Build cswig Python wrapper support." OFF)
