we need to find ImageCompare to run the tests
darcs-hash:20060726072450-2fc9d-b9eec48a65c9f81b754f2f773a1a60431491410f.gz

--- a/ExternalProjects/ItkVtkGlue/Wrapping/Python/Tests/CMakeLists.txt
+++ b/ExternalProjects/ItkVtkGlue/Wrapping/Python/Tests/CMakeLists.txt
@@ -1,4 +1,7 @@
 
+# configure the test driver
+FIND_PROGRAM(IMAGE_COMPARE ImageCompare)
+
 IF(CMAKE_CONFIGURATION_TYPES)
 
   FOREACH(config ${CMAKE_CONFIGURATION_TYPES})
