add the IJMacros.txt file required by the insight journal
darcs-hash:20060727151339-2fc9d-31ab70716986f15c0a5742199ae3117050fc566c.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ PROJECT(WrapITK)
 # TODO: add the FATAL_ERROR option when we will switch to cmake 2.4 - 2.2 does not support it
 CMAKE_MINIMUM_REQUIRED(VERSION 2.2)
 
+# needed for the insight journal
+INCLUDE(IJMacros.txt)
+
 ENABLE_TESTING()
 
 ###############################################################################
