fix java build on mac os x
darcs-hash:20060812123111-2fc9d-38492d8d9f9a4f757bc544d1a94c821646857a7e.gz

--- a/Java/CMakeLists.txt
+++ b/Java/CMakeLists.txt
@@ -94,7 +94,7 @@ ELSE(CMAKE_CONFIGURATION_TYPES)
   ADD_CUSTOM_TARGET(ITKJavaJar ALL DEPENDS ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar)
   WRAP_ITK_INSTALL(/Java ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar)
 ENDIF(CMAKE_CONFIGURATION_TYPES)
-ADD_DEPENDENCIES(ITKJavaJar ${ITK_JAVA_KIT_LIBS} SwigRuntimeJava)
+ADD_DEPENDENCIES(ITKJavaJar ${ITK_JAVA_KIT_LIBS} ${WRAP_ITK_JNILIB} SwigRuntimeJava)
 FOREACH(Kit ${WRAP_ITK_MODULES})
   ADD_DEPENDENCIES(ITKJavaJar "${Kit}Java")
 ENDFOREACH(Kit)
